--- a/app/views/mentees/show.html.erb
+++ b/app/views/mentees/show.html.erb
@@ -25,13 +25,6 @@
   <%= @mentee.email %>
 </p>
 
-<!--
-   <p>
-     <b>Password:</b>
-     <%= @mentee.password %>
-   </p>
--->
-
 <p>
   <b>Phone:</b>
   <%= @mentee.phone %>
@@ -40,7 +33,7 @@
 <p>
   <b>Skill Set:</b>
   <% @mentee.skills.each do |e| %>
-	<br /><%=e.title%> for <%=e.length_in_years%> years, comfort level <%=e.comfort_level%>
+  <br/><%=e.title%> (<%=e.comfort_level%>)
   <% end %>
 </p>
 
