--- a/app/views/skills/edit.html.erb
+++ b/app/views/skills/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @skill %> |
+<!-- <%= link_to 'Show', @skill %> | -->
 <%= link_to 'Back', skills_path %>
