navbar cleaning and mentor table improved

--- a/app/views/mentors/edit.html.erb
+++ b/app/views/mentors/edit.html.erb
@@ -1,3 +1,6 @@
 <h1>Edit your Mentor Profile</h1>
 
 <%= render 'form' %>
+
+<a href="/availability_calendars/new" target="_blank">Update Availability Calendar</a><br />
+<a href="/mentors/<%= session[:id] %>">View My Profile</a>
