--- a/app/views/mentors/index.html.erb
+++ b/app/views/mentors/index.html.erb
@@ -1,7 +1,8 @@
 <style type="text/css">
 #FilterDiv {
-float: left; 
+/*float: left; */
 width: 200px;
+position:absolute;
 }
 #FilterDiv label {
 display:block;
@@ -12,7 +13,6 @@ color: white;
 </style>
 
 <h1>Mentors</h1>
-<br /><br />
 <div id="FilterDiv" style="">
   <strong>Filter</strong>
   <%= form_tag "/mentors", :method => "get" do %>     
@@ -40,15 +40,13 @@ color: white;
 <a href="/mentors">Clear Filter</a>
 </div>
 
-<table>
+<!--<table>
   <tr>
     <th>First Name</th>
     <th>Location</th>
     <th>Current Position</th>
     <th>Total Years of Experience</th>
     <th></th>
-    <!-- <th></th> -->
-    <!-- <th></th> -->
   </tr>
 
 <% @mentors.each do |mentor| %>
@@ -58,11 +56,50 @@ color: white;
     <td><%= mentor.current_position %></td>
     <td><%= mentor.total_years_experience %></td>
     <td><%= link_to 'View Profile', mentor %></td>
-    <!-- <td><%= link_to 'Edit', edit_mentor_path(mentor) %></td> -->
-    <!-- <td><%= link_to 'Destroy', mentor, :confirm => 'Are you sure?', :method => :delete %></td> -->
   </tr>
   <% end %>
-</table>
+</table>-->
+<style>
+.mentorRowCol {
+	display: inline-block;
+	width:200px;
+	vertical-align:top;
+	padding:5px;
+}
+.mentorRowColFirst {
+	width:155px !important;
+}
+.mentorRow {
+	position:relative;
+	left:200px;
+	width:620px;	
+	border: 2px red solid;
+	padding:3px;
+	margin:12px 0px;
+}
+</style>
+<% @mentors.each do |mentor| %>
+<div class="mentorRow">
+	<div class="mentorRowCol mentorRowColFirst">
+		<%= link_to mentor.name, mentor %><br />
+		<a href="<%=url_for(mentor) %>"><img src="http://www.actionsportshub.com/uploads/profile/orig/default_profile.gif" width="50" /></a>
+	</div>
+	<div class="mentorRowCol">
+		Location: <%= mentor.location %><br />
+		Current Position: <%= mentor.current_position %><br />
+		Total Years Experience: <%= mentor.total_years_experience %>
+	</div>
+	<div class="mentorRowCol">
+		Skill Set:
+		  <% mentor.skills.each do |e| %>
+		  <br/><%=e.title%> (<%=e.comfort_level%>)
+		  <% end %>
+	</div>
+</div>
+<% end %>
+
 <br />
 
 <!-- <%= link_to 'New Mentor', new_mentor_path %> -->
+
+
