--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,33 @@
-<h1>ThoughtWorks Mentoring Home</h1>
-<p><strong>Random Mentor</strong></p>
-<table>
-<tr><th><a href="#">Location <img src="/images/down.png" alt="" /></a></th><th><a href="#">Technologies</a></th><th><a href="#">Preferred contact method</a></th><th><a href="#">Years Experience</a></th></tr>
-<tr><td><a href="#">Cincinnati</a></td><td><a href="#">C, Ruby</a></td><td><a href="#">Email</a></td><td><a href="#">5</a></td>
-</table>
+<h1>Welcome to ThoughtWorks Village!</h1>
 
+<table cellspacing=15>
+  <tr>
+    <td width="60%" height="50%">
+      <h2>About Us</h2>
+      We're dedicated to helping you reach your full potential as a software developer.<br/><br/>
+      For a mentorship opportunity, join us here at ThoughtWorks village!
+    </td>
+
+    <td rowspan="2" align="center" valign="middle">
+      <font size="+2"><strong><a href="/users/register">Join us here!</a></strong></font><br/><br/>
+      Already have an account?<br/>
+      <a href="/users/login">Login here.</a>
+    </td>
+  </tr>
+
+  <tr>
+    <td>
+      <h2>Meet one of our Mentors...</h2>
+      <% @random = Mentor.first(:order => 'RANDOM()') %>
+      <%= link_to @random.name, @random %>, <%= @random.current_position %><br/>
+      <%= @random.name.split(" ").first %> has <%= @random.total_years_experience %> years of experience.<br/>
+      Some of <%= @random.name.split(" ").first %>'s skills:
+      <% @random.skills.each do |e| %>
+      <br/><%=e.title%> (<%=e.comfort_level%>)
+      <% end %>
+    </td>
+
+    <td>
+    </td>
+  </tr>
+</table>
