Continuing work on password reset links. Still need to create the email, and handle everything after the user clicks the email link.

--- a/app/views/mentors/show.html.erb
+++ b/app/views/mentors/show.html.erb
@@ -127,4 +127,4 @@ $(function()
 <%= link_to 'Edit Profile', edit_mentor_path(@mentor) %> |
 <%= link_to 'Delete Account', @mentor, :confirm => 'Are you sure?', :method => :delete %> |
 <% end %>
-<%= link_to 'Back', mentors_path %>
+<%= link_to 'View all Mentors', mentors_path %>
