--- a/app/views/notifier/mentorship_rejected_email.html.erb
+++ b/app/views/notifier/mentorship_rejected_email.html.erb
@@ -9,7 +9,7 @@
       Hello, <%= @request.mentee.name %>. Unfortunately, <%= @request.mentor.name %> cannot mentor you at this time.</br>
     </p>
     <p>
-      We encourage you to try contacting another mentor. Start a new search <a href="<%= @url %>mentors">here</a>.</br>
+      We encourage you to try contacting another mentor, and start a new search <a href="<%= @url %>mentors">here</a>.</br>
     </p>
     <p>ThoughtWorks Village - "It Takes a Village"</p>
   </body>
