--- a/app/views/notifier/mentorship_request_email.text.erb
+++ b/app/views/notifier/mentorship_request_email.text.erb
@@ -2,11 +2,11 @@ New mentorship request from <%= @request.mentee.name %>
  
 Hello, <%= @request.mentor.name %>. You have a new mentorship request from <%= @request.mentee.name %>.
 
-Reason: <%= @request.reason %>.
+Reason: <%= @request.reason %>
 Estimated mentorship length: <%= @request.estimated_length %>
 
-To view <%= @request.mentee.name %>'s profile, click this link: <%= @url %>mentees/<%= @request.mentee.id %>.
+To view <%= @request.mentee.name %>'s profile, follow this link: <%= @url %>mentees/<%= @request.mentee.id %>
  
-To view and respond to your requests, click this link: <%= @url %>requests.
+To view and respond to your requests, follow this link: <%= @url %>requests
  
 ThoughtWorks Village - "It Takes a Village"
