--- a/app/views/mentees/show.html.erb
+++ b/app/views/mentees/show.html.erb
@@ -42,4 +42,4 @@
 <%= link_to 'Edit Profile', edit_mentee_path(@mentee) %> |
 <%= link_to 'Delete Account', @mentee, :confirm => 'Are you sure?', :method => :delete %> |
 <% end %>
-<%= link_to 'Back', mentees_path %>
+<%= link_to 'View all Mentees', mentees_path %>
