--- a/app/views/users/login.html.erb
+++ b/app/views/users/login.html.erb
@@ -27,7 +27,8 @@
     <%= f.submit "Login" %>
   </div>
   <br/>
-  <a href="/users/register">Don't have an account? Join us here!</a>
+  <a href="/users/register">Don't have an account?</a>
   <br/>
+  <%= link_to 'Forgot your password?', new_password_reset_path %>
   <br/>
 <% end %>
