--- a/app/views/notifier/mentorship_accepted_email.html.erb
+++ b/app/views/notifier/mentorship_accepted_email.html.erb
@@ -6,7 +6,7 @@
   <body>
     <h1>Mentorship Request: Accepted</h1>
     <p>
-      Hello, <%= @request.mentee.name %>! <%= @request.mentor.name %> has accepted your mentorship request.</br>
+      Hello, <%= @request.mentee.name %>. <%= @request.mentor.name %> has accepted your mentorship request.</br>
     </p>
     <p>
       You can contact <%= @request.mentor.name %> at this email address: <%= @request.mentor.email%></br>
