--- a/app/views/notifier/mentorship_request_email.html.erb
+++ b/app/views/notifier/mentorship_request_email.html.erb
@@ -4,7 +4,7 @@
     <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
   </head>
   <body>
-    <h1>New mentorship request from <%= @request.mentee.name %></h1>
+    <h1>Mentorship Request: Pending</h1>
     <p>
       Hello, <%= @request.mentor.name %>. You have a new mentorship request from <%= @request.mentee.name %>.</br>
     </p>
