--- a/app/views/notifier/mentorship_request_email.text.erb
+++ b/app/views/notifier/mentorship_request_email.text.erb
@@ -1,4 +1,4 @@
-New mentorship request from <%= @request.mentee.name %>
+Mentorship Request: Pending
  
 Hello, <%= @request.mentor.name %>. You have a new mentorship request from <%= @request.mentee.name %>.
 
