--- a/app/views/notifier/welcome_email.text.erb
+++ b/app/views/notifier/welcome_email.text.erb
@@ -4,6 +4,6 @@ Congratulations on creating your new profile! Here is your login information:
 
 Username: <%= @user.email %>
 
-You can login to your profile at <%= @url %>login. Thanks for signing up, and enjoy the site!
+You can login to your profile at <%= @url %>users/login. Thanks for signing up, and enjoy the site!
 
 ThoughtWorks Village - "It Takes a Village"
