--- a/app/views/notifier/welcome_email.html.erb
+++ b/app/views/notifier/welcome_email.html.erb
@@ -12,7 +12,7 @@
       Username: <%= @user.email %><br>
     </p>
     <p>
-      You can login to your profile at <a href="<%= @url %>login"><%= @url %>login</a>. Thanks for signing up, and enjoy the site!
+      You can login to your profile at <a href="<%= @url %>users/login"><%= @url %>login</a>. Thanks for signing up, and enjoy the site!
     </p>
     <p>ThoughtWorks Village - "It Takes a Village"</p>
   </body>
