--- a/app/views/users/login.html.erb
+++ b/app/views/users/login.html.erb
@@ -12,7 +12,6 @@
     </div>
   <% end %>
 
-
   <h1>Login</h1>
   <div class="field">
     <%= f.label :email %><br />
@@ -29,6 +28,6 @@
   <br/>
   <a href="/users/register">Don't have an account?</a>
   <br/>
-  <%= link_to 'Forgot your password?', new_password_reset_path %>
+  <a href="/users/forgot">Forgot your password?</a>
   <br/>
 <% end %>
