--- a/app/views/mentors/_form.html.erb
+++ b/app/views/mentors/_form.html.erb
@@ -30,11 +30,17 @@
     </tr>
     <tr>
       <td align="left" valign="top"><%= f.label :email %></td>
-      <td align="center"><%= f.text_field :email %></td>
+      <td align="center">
+	<%= f.text_field :email %><br/>
+	<%= f.text_field :email_confirmation %>
+      </td>
     </tr>
     <tr>
       <td align="left" valign="top"><%= f.label :password %></td>
-      <td align="center"><%= f.password_field :password %></td>
+      <td align="center">
+	<%= f.password_field :password %><br/>
+	<%= f.password_field :password_confirmation %>
+      </td>
     </tr>
     <tr>
       <td align="left" valign="top"><%= f.label :phone %></td>
