--- a/app/views/mentors/_form.html.erb
+++ b/app/views/mentors/_form.html.erb
@@ -30,17 +30,19 @@
     </tr>
     <tr>
       <td align="left" valign="top"><%= f.label :email %></td>
-      <td align="center">
-	<%= f.text_field :email %><br/>
-	<%= f.text_field :email_confirmation %>
-      </td>
+      <td align="center"><%= f.text_field :email %></td>
+    </tr>
+    <tr>
+      <td align="left" valign="top"><%= f.label :email_confirmation %></td>
+      <td align="center"><%= f.text_field :email_confirmation %></td>
     </tr>
     <tr>
       <td align="left" valign="top"><%= f.label :password %></td>
-      <td align="center">
-	<%= f.password_field :password %><br/>
-	<%= f.password_field :password_confirmation %>
-      </td>
+      <td align="center"><%= f.password_field :password %></td>
+    </tr>
+    <tr>
+      <td align="left" valign="top"><%= f.label :password_confirmation %></td>
+      <td align="center"><%= f.text_field :password_confirmation %></td>
     </tr>
     <tr>
       <td align="left" valign="top"><%= f.label :phone %></td>
