--- a/app/views/notifier/forgot_password_email.html.erb
+++ b/app/views/notifier/forgot_password_email.html.erb
@@ -12,7 +12,10 @@
       We received a request to reset your ThoughtWorks Village account password. If you did not make such a request, or you do not have a ThoughtWorks Village account, then you may delete and ignore this email.
     </p>
     <p>
-      <a href="<%= @url %>users/reset?email=<%= @user.email %>">To reset your password, click here.</a>
+      To reset your password, follow this link:
+      <a href="<%= @url %>users/reset?code=<%= @passrequest.code %>">
+	<%= @url %>users/reset?code=<%= @passrequest.code %>
+      </a>
     </p>
     <p>
       You will receive an email with your new password, which you can use to login to your account.
