--- a/app/views/mentees/index.html.erb
+++ b/app/views/mentees/index.html.erb
@@ -62,7 +62,7 @@ color: white;
 	margin:12px 0px;
 }
 </style>
-<% if @mentees != false %>
+<% if @mentees != nil %>
 <% @mentees.each do |mentee| %>
 <div class="mentorRow">
 	<div class="mentorRowCol mentorRowColFirst">
