--- a/app/views/mentors/index.html.erb
+++ b/app/views/mentors/index.html.erb
@@ -60,7 +60,7 @@ color: white;
 	margin:12px 0px;
 }
 </style>
-<% if @mentors != false %>
+<% if @mentors != nil %>
 <% @mentors.each do |mentor| %>
 <div class="mentorRow">
 	<div class="mentorRowCol mentorRowColFirst">
