--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>ThoughtWorks Village | www.thoughtworks.com</title>
+    <title>ThoughtWorks Village | "It Takes a Village"</title>
     <link rel="icon" href="/images/corporate_favicon.ico" type="image/ico" />
     <link rel="shortcut icon" href="/images/corporate_favicon.ico" type="image/ico" />
     <%= javascript_include_tag :defaults %>
